--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ footer {
     background-color: var(--primary-color);
     color: var(--text-color);
     text-align: center;
-    padding: 20px 0;
+    padding: 20px 0 40px;
     position: fixed;
     bottom: 0;
     width: 100%;
